Fixed tab wrapping issue. Resolves #1526

--- a/media/css/lightbox.css
+++ b/media/css/lightbox.css
@@ -198,7 +198,7 @@ input.text {
 }
 
 #ieee-societies-tab {
-    width: 125px;
+    width: 135px;
 }
 
 #related-tags-tab {
@@ -236,7 +236,7 @@ input.text {
 }
 
 #lightbox .resources-lightbox-content ul.nootabs-menus li.end-group-menu {
-    margin-right: 24px;
+    margin-right: 19px;
 }
 
 
